--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "exoplanet-python"
+name = "ExoPlanet_App"
 version = "0.1.0"
 description = ""
 authors = ["Winnie"]
@@ -19,5 +19,5 @@ mypy = "^1.9.0"
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0", "python==3.10.9"]
 build-backend = "poetry.core.masonry.api"
